testdata/golden/sema/invalid/arith_mixed_fixed_widths.sg
fn main() -> int {
    let a: int8 = 1;
    let b: int16 = 2;
    let _ = a + b;
    return 0;
}
